@@ -2,6 +2,14 @@
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## 1.19.2
+
+### Fixed
+
+- `runMigrations` task now supports MPS 2022.2 and above by adding the necessary `--add-opens` JVM
+  arguments.
+- `runMigrations` task now honors its `javaExec` property.
+
 ## 1.19.1
 
 ### Fixed
